--- a/index.html
+++ b/index.html
@@ -669,10 +669,6 @@
 
 
 
-<!--Rückblick Events -->
-
-
-
 <section class="bg-white border-b py-8">
   <div class="container max-w-5xl mx-auto m-8" data-aos="fade-left">
     <h1 class="w-full my-2 text-3xl sm:text-5xl font-bold leading-tight text-center text-gray-800" id="recent-events">
@@ -691,12 +687,14 @@
         &rarr;
       </button>
 
-      <!-- Mobile-Scroller / Desktop-Stack -->
-      <div id="rueckblick-cards" class="flex sm:flex-col overflow-x-auto gap-4 pr-4 snap-x snap-mandatory pb-4 sm:overflow-visible overscroll-x-auto scroll-smooth">
+      <!-- Scrolling Container -->
+      <div id="rueckblick-cards"
+           class="flex sm:flex-col overflow-x-auto gap-4 snap-x snap-mandatory pb-4 sm:overflow-visible overscroll-x-auto scroll-smooth min-w-0"
+           style="scroll-padding-left: 1rem; padding-left: 1rem; padding-right: 1rem;">
 
         <!-- Event 1 -->
-        <div class="flex-shrink-0 w-[85vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none p-4 sm:p-0">
-          <div class="flex flex-col sm:flex-row gap-4">
+        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0">
+          <div class="flex flex-col sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none">
             <div class="sm:w-1/2">
               <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
                 Stimmung pur bei der MTB-WM in Leogang
@@ -714,8 +712,8 @@
         </div>
 
         <!-- Event 2 -->
-        <div class="flex-shrink-0 w-[85vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none p-4 sm:p-0">
-          <div class="flex flex-col-reverse sm:flex-row gap-4" data-aos="fade-right">
+        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0">
+          <div class="flex flex-col-reverse sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none" data-aos="fade-right">
             <div class="sm:w-1/2">
               <img class="w-full h-64 sm:h-[280px] object-cover rounded-xl" src="img/p2.jpg" alt="Mozart100" />
             </div>
@@ -733,8 +731,8 @@
         </div>
 
         <!-- Event 3 -->
-        <div class="flex-shrink-0 w-[85vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none p-4 sm:p-0">
-          <div class="flex flex-col sm:flex-row gap-4" data-aos="fade-left">
+        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0">
+          <div class="flex flex-col sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none" data-aos="fade-left">
             <div class="sm:w-1/2">
               <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
                 Knödel, Beats & Party – mein Auftritt beim Knödelclubbing
@@ -753,13 +751,13 @@
 
       </div>
 
-
-    <!-- Button (vorerst ausgeblendet) -->
-    <div class="text-center mt-6">
-      <a class="hidden outline-purple-600 hover:shadow-purple-600 text-purple-600 font-bold py-2 px-8 rounded-full outline outline-2 hover:bg-purple-600 hover:text-white inline-flex items-center" href="references.html" style="box-shadow: 0 0 0 2px #9333ea;">
-        Mehr ansehen
-        <i class="mdi mdi-arrow-right ml-2 -mr-1 text-xl"></i>
-      </a>
+      <!-- Button (optional, aktuell hidden) -->
+      <div class="text-center mt-6">
+        <a class="hidden outline-purple-600 hover:shadow-purple-600 text-purple-600 font-bold py-2 px-8 rounded-full outline outline-2 hover:bg-purple-600 hover:text-white inline-flex items-center" href="references.html" style="box-shadow: 0 0 0 2px #9333ea;">
+          Mehr ansehen
+          <i class="mdi mdi-arrow-right ml-2 -mr-1 text-xl"></i>
+        </a>
+      </div>
     </div>
   </div>
 </section>
@@ -773,10 +771,6 @@
     document.getElementById('rueckblick-cards').scrollBy({ left: 300, behavior: 'smooth' });
   }
 </script>
-
-
-
-
 
 
 
