--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
            style="scroll-padding-left: 1rem; padding-left: 1rem; padding-right: 1rem;">
 
         <!-- Event 1 -->
-        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0">
+        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
           <div class="flex flex-col sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none">
             <div class="sm:w-1/2">
               <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
@@ -712,7 +712,7 @@
         </div>
 
         <!-- Event 2 -->
-        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0">
+        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
           <div class="flex flex-col-reverse sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none" data-aos="fade-right">
             <div class="sm:w-1/2">
               <img class="w-full h-64 sm:h-[280px] object-cover rounded-xl" src="img/p2.jpg" alt="Mozart100" />
@@ -731,7 +731,7 @@
         </div>
 
         <!-- Event 3 -->
-        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0">
+        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
           <div class="flex flex-col sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none" data-aos="fade-left">
             <div class="sm:w-1/2">
               <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
@@ -762,15 +762,57 @@
   </div>
 </section>
 
-<!-- Scroll-Logik Rückblick -->
+<!-- Neue Scroll-Logik (snapt zur nächsten Karte) -->
 <script>
+  function updateScrollButtons(containerId) {
+    const container = document.getElementById(containerId);
+    const leftBtn = document.getElementById('btn-scroll-left');
+    const rightBtn = document.getElementById('btn-scroll-right');
+
+    const scrollLeft = container.scrollLeft;
+    const maxScrollLeft = container.scrollWidth - container.clientWidth;
+
+    leftBtn.style.display = scrollLeft > 0 ? 'block' : 'none';
+    rightBtn.style.display = scrollLeft < maxScrollLeft - 10 ? 'block' : 'none';
+  }
+
+  function scrollToCard(containerId, direction = 'right') {
+    const container = document.getElementById(containerId);
+    const cards = container.querySelectorAll('[data-snap-card]');
+    const scrollLeft = container.scrollLeft;
+    const containerWidth = container.clientWidth;
+
+    let targetScroll = scrollLeft;
+
+    if (direction === 'right') {
+      targetScroll += containerWidth;
+    } else {
+      targetScroll -= containerWidth;
+    }
+
+    container.scrollTo({ left: targetScroll, behavior: 'smooth' });
+
+    setTimeout(() => updateScrollButtons(containerId), 500);
+  }
+
   function scrollBackLeft() {
-    document.getElementById('rueckblick-cards').scrollBy({ left: -300, behavior: 'smooth' });
+    scrollToCard('rueckblick-cards', 'left');
   }
+
   function scrollBackRight() {
-    document.getElementById('rueckblick-cards').scrollBy({ left: 300, behavior: 'smooth' });
+    scrollToCard('rueckblick-cards', 'right');
   }
+
+  window.addEventListener('DOMContentLoaded', () => updateScrollButtons('rueckblick-cards'));
 </script>
+
+
+
+
+
+
+
+
 
 
 
