--- a/index.html
+++ b/index.html
@@ -465,102 +465,143 @@
       <div class="h-1 mx-auto bg-purple-600 w-64 my-0 py-0 rounded-t"></div>
     </div>
 
-    <div class="relative">
+    <div class="relative overflow-hidden">
       <!-- Navigationspfeile (mobil-only) -->
-      <button class="absolute left-2 top-1/2 transform -translate-y-1/2 z-10 sm:hidden bg-purple-600 text-white p-2 rounded-full shadow" onclick="scrollRefsLeft()">
+      <button id="btn-refs-left" class="absolute left-2 top-1/2 transform -translate-y-1/2 z-10 sm:hidden bg-purple-600 text-white p-2 rounded-full shadow" onclick="scrollRefsLeft()">
         &larr;
       </button>
-      <button class="absolute right-2 top-1/2 transform -translate-y-1/2 z-10 sm:hidden bg-purple-600 text-white p-2 rounded-full shadow" onclick="scrollRefsRight()">
+      <button id="btn-refs-right" class="absolute right-2 top-1/2 transform -translate-y-1/2 z-10 sm:hidden bg-purple-600 text-white p-2 rounded-full shadow" onclick="scrollRefsRight()">
         &rarr;
       </button>
- <div id="referenzen-cards" class="flex overflow-x-auto snap-x snap-mandatory space-x-4 px-1 sm:grid sm:grid-cols-2 lg:grid-cols-3 scroll-smooth">
+
+      <div id="referenzen-cards"
+        class="flex snap-x snap-mandatory gap-4 px-4 sm:grid sm:grid-cols-2 lg:grid-cols-3 overflow-x-auto sm:overflow-visible scroll-smooth min-w-0"
+        style="scroll-padding-left: 1rem;">
+
+
 
 
 <!-- Karte 1 -->
-<div class="flex-shrink-0 w-[90vw] snap-start sm:w-auto max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4">
-  <img alt="KrallerAlm Leogang" class="w-full h-64 sm:h-80 object-cover" src="img/kralleralm.png" />
-  <div class="px-6 py-4">
-    <h3 class="text-lg sm:text-2xl">Stamm-DJ in der KrallerAlm Leogang</h3>
-    <p class="text-gray-700 text-sm sm:text-base mt-2">Du warst noch nie dort, wenn DJ Jonny aufgelegt hat? Dann warst du noch nie richtig in der KrallerAlm! Seit Jahren sorgt er in Leogangs legendärster Partylocation für Gänsehaut, Mitsingmomente und ausgelassene Stimmung bis in die frühen Morgenstunden.</p>
-  </div>
-  <div class="px-6 py-4">
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#kralleralm</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#leogang</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#legendär</span>
-  </div>
-</div>
+        <div class="flex-shrink-0 w-full max-w-[90vw]
+ sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+          <div class="flex flex-col h-full">
+            <img alt="KrallerAlm Leogang" class="w-full h-64 sm:h-80 object-cover" src="img/kralleralm.png" />
+            <div class="flex flex-col justify-between h-full">
+              <div class="px-6 py-4">
+                <h3 class="text-lg sm:text-2xl">Stamm-DJ in der KrallerAlm Leogang</h3>
+                <p class="text-gray-700 text-sm sm:text-base mt-2">Du warst noch nie dort, wenn DJ Jonny aufgelegt hat? Dann warst du noch nie richtig in der KrallerAlm! Seit Jahren sorgt er in Leogangs legendärster Partylocation für Gänsehaut, Mitsingmomente und ausgelassene Stimmung bis in die frühen Morgenstunden.</p>
+              </div>
+             <div class="px-6 py-4 flex flex-wrap gap-2">
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#kralleralm</span>
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#leogang</span>
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#legendär</span>
+              </div>
+            </div>
+          </div>
+        </div>
 
 <!-- Karte 2 -->
-<div class="flex-shrink-0 w-[90vw] snap-start sm:w-auto max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4">
-  <img alt="Interspar Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/interspar.jpeg" />
-  <div class="px-6 py-4">
-    <h3 class="text-lg sm:text-2xl">Weihnachtsfeiern bei Interspar Saalfelden</h3>
-    <p class="text-gray-700 text-sm sm:text-base mt-2">Firmenfeier oder Jahresabschluss? DJ Jonny verwandelt den Pausenraum in eine Partyzone. Bei den Weihnachtsfeiern von Interspar in Saalfelden trifft gemütliches Beisammensein auf musikalische Höhenflüge. Garantiert nicht still!</p>
-  </div>
-  <div class="px-6 py-4">
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#interspar</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#saalfelden</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#firmenfeier</span>
-  </div>
-</div>
-
-<!-- Karte 3 -->
-<div class="flex-shrink-0 w-[90vw] snap-start sm:w-auto max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4">
-  <img alt="Schaumparty Die Bar" class="w-full h-64 sm:h-80 object-cover" src="img/schaumparty.png" />
-  <div class="px-6 py-4">
-    <h3 class="text-lg sm:text-2xl">Schaumparty in "Die Bar", Saalfelden</h3>
-    <p class="text-gray-700 text-sm sm:text-base mt-2">Nass, wild und nicht jugendfrei – bei der Schaumparty in „Die Bar“ bringt DJ Jonny mehr als nur das Wasser zum Brodeln. Wenn du einmal dabei warst, weißt du: Das ist kein Abend, das ist ein Erlebnis.</p>
-  </div>
-  <div class="px-6 py-4">
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#schaumparty</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#diebar</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#mallevibes</span>
+<div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+  <div class="flex flex-col h-full">
+    <img alt="Interspar Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/interspar.jpeg" />
+    <div class="flex flex-col justify-between h-full">
+      <div class="px-6 py-4">
+        <h3 class="text-lg sm:text-2xl">Weihnachtsfeiern bei Interspar Saalfelden</h3>
+        <p class="text-gray-700 text-sm sm:text-base mt-2">
+          Wenn das Interspar-Team feiert, dann richtig! Jahr für Jahr sorgt DJ Jonny bei den internen Weihnachtsfeiern für volle Tanzflächen, laute Mitsingmomente 
+          und den perfekten musikalischen Ausklang des Jahres. Von ruhigen Beginn bis zum ausgelassenen Finale: Hier stimmt einfach der Vibe.
+        </p>
+      </div>
+      <div class="px-6 py-4 flex flex-wrap gap-2">
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#interspar</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#saalfelden</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#weihnachtsfeier</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#teamvibes</span>
+      </div>
+    </div>
   </div>
 </div>
 
-<!-- Karte 4 -->
-<div class="flex-shrink-0 w-[90vw] snap-start sm:w-auto max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4">
-  <img alt="Insider Zell am See" class="w-full h-64 sm:h-80 object-cover" src="img/insider.jpeg" />
-  <div class="px-6 py-4">
-    <h3 class="text-lg sm:text-2xl">Insider – Zell am See</h3>
-    <p class="text-gray-700 text-sm sm:text-base mt-2">Mitten im Herzen des Zeller Nachtlebens sorgt DJ Jonny im „Insider“ regelmäßig für das perfekte Wochenende. Ob Hüttenparty-Stimmung oder Clubfeeling – hier kommst du nicht zum Sitzen, sondern zum Tanzen!</p>
-  </div>
-  <div class="px-6 py-4">
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#zellamsee</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#insider</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#clubvibes</span>
-  </div>
-</div>
+
+        <!-- Karte 3 -->
+        <div class="flex-shrink-0 w-full max-w-[90vw]
+ sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+          <div class="flex flex-col h-full">
+            <img alt="Schaumparty Die Bar" class="w-full h-64 sm:h-80 object-cover" src="img/schaumparty.png" />
+            <div class="flex flex-col justify-between h-full">
+              <div class="px-6 py-4">
+                <h3 class="text-lg sm:text-2xl">Schaumparty in "Die Bar", Saalfelden</h3>
+                <p class="text-gray-700 text-sm sm:text-base mt-2">Nass, wild und nicht jugendfrei – bei der Schaumparty in „Die Bar“ bringt DJ Jonny mehr als nur das Wasser zum Brodeln. Wenn du einmal dabei warst, weißt du: Das ist kein Abend, das ist ein Erlebnis.</p>
+              </div>
+              <div class="px-6 py-4 flex flex-wrap gap-2">
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#schaumparty</span>
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#diebar</span>
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#mallevibes</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Karte 4 -->
+        <div class="flex-shrink-0 w-full max-w-[90vw]
+ sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+          <div class="flex flex-col h-full">
+            <img alt="Insider Zell am See" class="w-full h-64 sm:h-80 object-cover" src="img/insider.jpeg" />
+            <div class="flex flex-col justify-between h-full">
+              <div class="px-6 py-4">
+                <h3 class="text-lg sm:text-2xl">Insider – Zell am See</h3>
+                <p class="text-gray-700 text-sm sm:text-base mt-2"> Wer das Wochenende in Zell am See verbringt, kommt am „Insider“ nicht vorbei. DJ Jonny liefert hier regelmäßig feinste Clubbeats und sorgt für ausgelassene Stimmung auf der Tanzfläche – vom ersten Drink bis zur letzten Nummer. 
+          Ein echter Pflichttermin für Nachtschwärmer!</p>
+              </div>
+        <div class="px-6 py-4 flex flex-wrap gap-2">
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#zellamsee</span>
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#insider</span>
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#clubvibes</span>
+              </div>
+            </div>
+          </div>
+        </div>
 
 <!-- Karte 5 -->
-<div class="flex-shrink-0 w-[90vw] snap-start sm:w-auto max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4">
-  <img alt="Feuerwehrfest Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/feuerwehr-draufg.jpeg" />
-  <div class="px-6 py-4">
-    <h3 class="text-lg sm:text-2xl">Feuerwehrfest Saalfelden – Warm-up für die Draufgänger</h3>
-    <p class="text-gray-700 text-sm sm:text-base mt-2">Bevor die Draufgänger die Bühne stürmen, bringt DJ Jonny das Zelt zum Kochen. Beim Feuerwehrfest in Saalfelden heißt’s: Uniform an, Feiermodus aktiviert!</p>
-  </div>
-  <div class="px-6 py-4">
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#draufgänger</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#feuerwehrfest</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#warmup</span>
-  </div>
-</div>
-
-<!-- Karte 6 -->
-<div class="flex-shrink-0 w-[90vw] snap-start sm:w-auto max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4">
-  <img alt="4Flow Festival Sölden" class="w-full h-64 sm:h-80 object-cover" src="img/4flow.jpeg" />
-  <div class="px-6 py-4">
-    <h3 class="text-lg sm:text-2xl">4Flow Festival in Sölden</h3>
-    <p class="text-gray-700 text-sm sm:text-base mt-2">Schnee, Beats und Adrenalin: Beim 4Flow Festival bringt DJ Jonny nicht nur den Schnee zum Schmelzen, sondern auch das Publikum zum Ausflippen. Hoch oben in Sölden, aber mit Bass tief im Herz!</p>
-  </div>
-  <div class="px-6 py-4">
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#4flowfestival</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#sölden</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#apresski</span>
+<div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+  <div class="flex flex-col h-full">
+    <img alt="Feuerwehrfest Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/feuerwehr-draufg.jpeg" />
+    <div class="flex flex-col justify-between h-full">
+      <div class="px-6 py-4">
+        <h3 class="text-lg sm:text-2xl">Feuerwehrfest Saalfelden – Warm-up für die Draufgänger</h3>
+        <p class="text-gray-700 text-sm sm:text-base mt-2">
+          DJ Jonny bringt die Menge so richtig auf Betriebstemperatur. 
+          Noch bevor die Draufgänger die Bühne betreten, herrscht dank seiner Show bereits Ausnahmezustand im Publikum – mitsingen, mittanzen, mitfeiern ist angesagt. 
+          Ein Warm-up, das den Namen wirklich verdient – voller Stimmung, voller Energie, voller Feuer!
+        </p>
+      </div>
+      <div class="px-6 py-4 flex flex-wrap gap-2">
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#draufgänger</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#feuerwehrfest</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#warmup</span>
+      </div>
+    </div>
   </div>
 </div>
 
 
+        <!-- Karte 6 -->
+        <div class="flex-shrink-0 w-full max-w-[90vw]
+ sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+          <div class="flex flex-col h-full">
+            <img alt="4Flow Festival Sölden" class="w-full h-64 sm:h-80 object-cover" src="img/4flow.jpeg" />
+            <div class="flex flex-col justify-between h-full">
+              <div class="px-6 py-4">
+                <h3 class="text-lg sm:text-2xl">4Flow Festival in Sölden</h3>
+                <p class="text-gray-700 text-sm sm:text-base mt-2">Schnee, Beats und Adrenalin: Beim 4Flow Festival bringt DJ Jonny nicht nur den Schnee zum Schmelzen, sondern auch das Publikum zum Ausflippen. Hoch oben in Sölden, aber mit Bass tief im Herz!</p>
+              </div>
+           <div class="px-6 py-4 flex flex-wrap gap-2">
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#4flowfestival</span>
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#sölden</span>
+                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#apresski</span>
+              </div>
+            </div>
+</div>
       </div>
     </div>
 
@@ -579,13 +620,48 @@
 
 
 <!-- Scroll-Logik Referenzen -->
+
 <script>
+  function updateRefButtons() {
+    const container = document.getElementById('referenzen-cards');
+    const leftBtn = document.getElementById('btn-refs-left');
+    const rightBtn = document.getElementById('btn-refs-right');
+
+    if (window.innerWidth >= 640) {
+      leftBtn.style.display = 'none';
+      rightBtn.style.display = 'none';
+      return;
+    }
+
+    const scrollLeft = container.scrollLeft;
+    const maxScrollLeft = container.scrollWidth - container.clientWidth;
+    const tolerance = 6;
+
+    leftBtn.style.display = scrollLeft <= tolerance ? 'none' : 'block';
+    rightBtn.style.display = scrollLeft >= maxScrollLeft - tolerance ? 'none' : 'block';
+  }
+
+  function scrollToRefCard(direction = 'right') {
+    const container = document.getElementById('referenzen-cards');
+    const cardWidth = container.querySelector('.snap-start').offsetWidth + 16; // 16px = gap-4
+    const scrollAmount = direction === 'right' ? cardWidth : -cardWidth;
+    container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+    setTimeout(updateRefButtons, 500);
+  }
+
   function scrollRefsLeft() {
-    document.getElementById('referenzen-cards').scrollBy({ left: -300, behavior: 'smooth' });
+    scrollToRefCard('left');
   }
+
   function scrollRefsRight() {
-    document.getElementById('referenzen-cards').scrollBy({ left: 300, behavior: 'smooth' });
+    scrollToRefCard('right');
   }
+
+  window.addEventListener('DOMContentLoaded', updateRefButtons);
+  window.addEventListener('resize', updateRefButtons);
+  document.getElementById('referenzen-cards').addEventListener('scroll', () => {
+    setTimeout(updateRefButtons, 200);
+  });
 </script>
 
 
@@ -598,11 +674,16 @@
 
 
 
+
+
+
+
+
+
+
+
+
 <!--Nächste Events -->
-
-
-
-
 
 
 <section class="bg-white border-b py-8 px-6" id="next-events-section">
