--- a/index.html
+++ b/index.html
@@ -285,10 +285,20 @@
 
 <!-- ✅ SOCIAL ICONS NUR AUF MOBIL SICHTBAR (NICHT MEHR AUF DESKTOP) -->
 <div class="fixed bottom-0 left-0 right-0 bg-white/90 border-t border-gray-200 sm:hidden z-50 py-2 px-4 flex justify-around items-center backdrop-blur social-buttons-mobile">
-  <a href="#" class="text-pink-600"><i class="mdi mdi-instagram text-xl"></i></a>
-  <a href="#" class="text-red-600"><i class="mdi mdi-youtube text-xl"></i></a>
-  <a href="#" class="text-green-600"><i class="mdi mdi-spotify text-xl"></i></a>
-  <a href="#" class="text-black"><i class="mdi mdi-tiktok text-xl"></i></a>
+  <a href="https://www.instagram.com/dj_jonny83" target="_blank" class="text-pink-600">
+    <i class="mdi mdi-instagram text-xl"></i>
+  </a>
+  <a href="https://youtube.com/@jonnyfankhauser?si=AsFBi0zSwa6UTqsl" target="_blank" class="text-red-600">
+    <i class="mdi mdi-youtube text-xl"></i>
+  </a>
+  <a href="https://open.spotify.com/user/31qh6hzxh6mtqyjzwm7ug5vnr6gi?si=9IkLQYiPR32CHTCLCZWFmg" target="_blank" class="text-green-600">
+    <i class="mdi mdi-spotify text-xl"></i>
+<a href="https://www.tiktok.com/@itsjonnyalta?_t=ZN-8x7U9emhFrS&_r=1" target="_blank" class="text-black w-6 h-6">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" class="w-6 h-6 fill-current">
+    <path d="M224,80.6c-27.1,0-48.9-21.9-48.9-48.9h-40.6v138.3c0,11.8-9.5,21.4-21.4,21.4s-21.4-9.6-21.4-21.4s9.5-21.4,21.4-21.4c3.9,0,7.5,1.1,10.7,2.9v-42.3c-3.5-.5-7-.8-10.7-.8c-35.2,0-63.8,28.6-63.8,63.8s28.6,63.8,63.8,63.8s63.8-28.6,63.8-63.8V113.4c13.1,9.4,29.1,14.9,46.3,14.9v-47.7H224z"/>
+  </svg>
+</a>
+
 </div>
 
 
