--- a/index.html
+++ b/index.html
@@ -218,13 +218,16 @@
       <a href="#services" class="hover:text-purple-600">Leistungen</a>
     </nav>
 
-    <!-- Sprachwahl + Burger-Menü -->
-    <div class="flex items-center gap-3">
-      <!-- Sprachwahl (Desktop sichtbar) -->
-      <div class="hidden sm:flex gap-2 items-center">
-        <a href="#" class="flag-icon flag-icon-de w-6 h-6"></a>
-        <a href="#" class="flag-icon flag-icon-us w-6 h-6"></a>
-      </div>
+<div class="hidden sm:flex gap-2 items-center">
+<a href="index.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="index-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="index-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="index-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+
+
+
+</div>
+
 
       <!-- Burger-Menü (nur mobil sichtbar) -->
       <div class="sm:hidden">
@@ -245,10 +248,14 @@
     <a href="#next-events" class="text-purple-700 font-medium hover:text-purple-900">Nächste Events</a>
     <a href="#about-me" class="text-purple-700 font-medium hover:text-purple-900">Über mich</a>
     <a href="#services" class="text-purple-700 font-medium hover:text-purple-900">Leistungen</a>
-    <div class="flex gap-4 pt-2">
-      <a href="#" class="flag-icon flag-icon-de w-6 h-6"></a>
-      <a href="#" class="flag-icon flag-icon-us w-6 h-6"></a>
-    </div>
+<div class="flex gap-4 pt-2">
+ <a href="index.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="index-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="index-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="index-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+
+</div>
+
   </div>
 </div>
 
@@ -1107,8 +1114,11 @@
 <div class="mb-6">
   <h5 class="uppercase font-bold mb-2.5">Sprachen</h5>
   <ul class="list-none mb-0">
-    <li><a href="#languages" class="text-white">Deutsch</a></li>
-    <li><a href="#languages" class="text-white">Englisch</a></li>
+    <li><a href="index.html" class="text-white">Deutsch</a></li>
+    <li><a href="index-en.html" class="text-white">Englisch</a></li>
+<li><a href="index-zh.html" class="text-white">Chinesisch</a></li>
+<li><a href="index-ru.html" class="text-white">Russisch</a></li>
+
   </ul>
 </div>
 
