--- a/index.html
+++ b/index.html
@@ -194,6 +194,20 @@
     .social-sidebar {
       display: none !important;
     }
+
+  input,
+  select,
+  textarea {
+    width: 100% !important;
+    max-width: 100% !important;
+  }
+
+  input[type="date"] {
+    appearance: none;
+    -webkit-appearance: none;
+    padding-right: 1rem;
+  }
+
   }
 </style>
 
@@ -1044,7 +1058,8 @@
               <label class="block mb-1 font-semibold" for="datum">Wunschtermin</label>
               <span class="text-xs text-gray-400 italic">optional</span>
             </div>
-            <input type="date" id="datum" name="datum" class="w-full px-4 py-2 rounded text-black shadow-inner" />
+            <input type="date" id="datum" name="datum" class="w-full max-w-full sm:max-w-none px-4 py-2 rounded text-black shadow-inner" />
+
           </div>
 
           <div>
