--- a/index.html
+++ b/index.html
@@ -195,19 +195,37 @@
       display: none !important;
     }
 
-  input,
-  select,
-  textarea {
-    width: 100% !important;
-    max-width: 100% !important;
-  }
+ input,
+    select,
+    textarea {
+      width: 100% !important;
+      max-width: 100% !important;
+      height: auto;
+      font-size: 1rem;
+      border-radius: 0.5rem;
+      padding: 0.75rem 1rem;
+    }
 
-  input[type="date"] {
-    appearance: none;
-    -webkit-appearance: none;
-    padding-right: 1rem;
-  }
+    input[type="date"] {
+      appearance: none;
+      -webkit-appearance: none;
+      padding-right: 1rem;
+    }
 
+    textarea {
+      min-height: 120px;
+    }
+
+    form.grid.gap-6 > div {
+      margin-bottom: 0.5rem;
+    }
+
+    form button[type="submit"] {
+      padding-top: 0.75rem;
+      padding-bottom: 0.75rem;
+      font-size: 1rem;
+      border-radius: 9999px;
+    }
   }
 </style>
 
@@ -1011,67 +1029,69 @@
 
       <!-- FORMULARKARTE -->
 
-<div class="max-w-3xl mx-auto bg-zinc-800 text-white rounded-3xl shadow-2xl p-8 sm:p-10 border border-zinc-700 ring-2 ring-purple-500/30 hover:ring-purple-500/60 transition duration-300">
+<div class="max-w-3xl mx-auto bg-zinc-800 text-white rounded-3xl shadow-2xl p-6 sm:p-10 border border-zinc-700 ring-2 ring-purple-500/30 hover:ring-purple-500/60 transition duration-300">
 
+  <form action="https://formspree.io/f/xzzrnqze" method="POST" class="grid gap-6">
+    
+    <!-- Name -->
+    <div>
+      <label class="block mb-1 font-semibold" for="name">Name</label>
+      <input type="text" id="name" name="name" required class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base" />
+    </div>
 
+    <!-- E-Mail -->
+    <div>
+      <label class="block mb-1 font-semibold" for="email">E-Mail</label>
+      <input type="email" id="email" name="_replyto" required class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base" />
+    </div>
 
-
-
-        <form action="https://formspree.io/f/xzzrnqze" method="POST" class="grid gap-6">
-          <div>
-            <label class="block mb-1 font-semibold" for="name">Name</label>
-            <input type="text" id="name" name="name" required class="w-full px-4 py-2 rounded text-black shadow-inner" />
-          </div>
-
-          <div>
-            <label class="block mb-1 font-semibold" for="email">E-Mail</label>
-            <input type="email" id="email" name="_replyto" required class="w-full px-4 py-2 rounded text-black shadow-inner" />
-          </div>
-
-          <div>
-            <div class="flex justify-between items-center">
-              <label class="block mb-1 font-semibold" for="phone">Telefonnummer</label>
-              <span class="text-xs text-gray-400 italic">optional</span>
-            </div>
-            <input type="tel" id="phone" name="phone" placeholder="z. B. +43 660 1234567" class="w-full px-4 py-2 rounded text-black shadow-inner" />
-          </div>
-
-          <div>
-        <div class="flex justify-between items-center">
-    <label class="block mb-1 font-semibold" for="eventart">Eventart</label>
-    <span class="text-xs text-gray-400 italic">optional</span>
-  </div>
-
-            <select id="eventart" name="eventart" required class="w-full px-4 py-2 rounded text-black shadow-inner">
-              <option value="">Bitte wählen …</option>
-              <option>Hochzeit</option>
-              <option>Geburtstag</option>
-              <option>Clubnacht</option>
-              <option>Firmenfeier</option>
-              <option>Festival / Großevent</option>
-              <option>Sonstiges</option>
-            </select>
-          </div>
-
-          <div>
-            <div class="flex justify-between items-center">
-              <label class="block mb-1 font-semibold" for="datum">Wunschtermin</label>
-              <span class="text-xs text-gray-400 italic">optional</span>
-            </div>
-            <input type="date" id="datum" name="datum" class="w-full max-w-full sm:max-w-none px-4 py-2 rounded text-black shadow-inner" />
-
-          </div>
-
-          <div>
-            <label class="block mb-1 font-semibold" for="message">Nachricht</label>
-            <textarea id="message" name="message" required rows="4" class="w-full px-4 py-2 rounded text-black shadow-inner"></textarea>
-          </div>
-
-          <button type="submit" class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 rounded-full shadow-lg transition">
-            Nachricht senden
-          </button>
-        </form>
+    <!-- Telefonnummer -->
+    <div>
+      <div class="flex justify-between items-center">
+        <label class="block mb-1 font-semibold" for="phone">Telefonnummer</label>
+        <span class="text-xs text-gray-400 italic">optional</span>
       </div>
+      <input type="tel" id="phone" name="phone" placeholder="z. B. +43 660 1234567" class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base" />
+    </div>
+
+    <!-- Eventart -->
+    <div>
+      <div class="flex justify-between items-center">
+        <label class="block mb-1 font-semibold" for="eventart">Eventart</label>
+        <span class="text-xs text-gray-400 italic">optional</span>
+      </div>
+      <select id="eventart" name="eventart" class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base">
+        <option value="">Bitte wählen …</option>
+        <option>Hochzeit</option>
+        <option>Geburtstag</option>
+        <option>Clubnacht</option>
+        <option>Firmenfeier</option>
+        <option>Festival / Großevent</option>
+        <option>Sonstiges</option>
+      </select>
+    </div>
+
+    <!-- Wunschtermin -->
+    <div>
+      <div class="flex justify-between items-center">
+        <label class="block mb-1 font-semibold" for="datum">Wunschtermin</label>
+        <span class="text-xs text-gray-400 italic">optional</span>
+      </div>
+      <input type="date" id="datum" name="datum" class="w-full max-w-full sm:max-w-none px-4 py-3 rounded-md text-black shadow-inner text-base" />
+    </div>
+
+    <!-- Nachricht -->
+    <div>
+      <label class="block mb-1 font-semibold" for="message">Nachricht</label>
+      <textarea id="message" name="message" required rows="4" class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base min-h-[120px]"></textarea>
+    </div>
+
+    <!-- Button -->
+    <button type="submit" class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 rounded-full shadow-lg transition text-base">
+      Nachricht senden
+    </button>
+  </form>
+</div>
 
 
 
