--- a/index.html
+++ b/index.html
@@ -1083,6 +1083,7 @@
   </div>
 
   <!-- Mobil: Datepicker sichtbar -->
+<div class="relative block sm:hidden">
   <input
     id="datum-mobil"
     name="datum"
@@ -1090,8 +1091,17 @@
     datepicker
     datepicker-format="dd.mm.yyyy"
     placeholder="Wunschtermin auswählen"
-    class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base block sm:hidden"
+    class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base bg-white"
   />
+  <div class="pointer-events-none absolute inset-y-0 right-4 flex items-center text-gray-400">
+    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
+    </svg>
+  </div>
+</div>
+
+
+
 
   <!-- Desktop: normales Date-Feld -->
   <input
