--- a/index.html
+++ b/index.html
@@ -1058,59 +1058,61 @@
       <input type="tel" id="phone" name="phone" placeholder="z. B. +43 660 1234567" class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base" />
     </div>
 
-    <!-- Eventart -->
-    <div>
-      <div class="flex justify-between items-center">
-        <label class="block mb-1 font-semibold" for="eventart">Eventart</label>
-        <span class="text-xs text-gray-400 italic">optional</span>
-      </div>
-      <select id="eventart" name="eventart" class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base">
-        <option value="">Bitte wählen …</option>
-        <option>Hochzeit</option>
-        <option>Geburtstag</option>
-        <option>Clubnacht</option>
-        <option>Firmenfeier</option>
-        <option>Festival / Großevent</option>
-        <option>Sonstiges</option>
-      </select>
-    </div>
+   <!-- Eventart -->
+<div>
+  <div class="flex justify-between items-center">
+    <label class="block mb-1 font-semibold" for="eventart">Eventart</label>
+    <span class="text-xs text-gray-400 italic">optional</span>
+  </div>
+  <select
+    id="eventart"
+    name="eventart"
+    class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base bg-white"
+  >
+    <option value="">Bitte wählen …</option>
+    <option>Hochzeit</option>
+    <option>Geburtstag</option>
+    <option>Clubnacht</option>
+    <option>Firmenfeier</option>
+    <option>Festival / Großevent</option>
+    <option>Sonstiges</option>
+  </select>
+</div>
 
-   <!-- Wunschtermin -->
+<!-- Wunschtermin -->
 <div>
   <div class="flex justify-between items-center">
     <label class="block mb-1 font-semibold" for="datum">Wunschtermin</label>
     <span class="text-xs text-gray-400 italic">optional</span>
   </div>
 
-  <!-- Mobil: Datepicker sichtbar -->
-<div class="relative block sm:hidden">
-  <input
-    id="datum-mobil"
-    name="datum"
-    type="text"
-    datepicker
-    datepicker-format="dd.mm.yyyy"
-    placeholder="Wunschtermin auswählen"
-    class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base bg-white"
-  />
-  <div class="pointer-events-none absolute inset-y-0 right-4 flex items-center text-gray-400">
-    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
-    </svg>
+  <!-- Mobil -->
+  <div class="relative block sm:hidden">
+    <input
+      id="datum-mobil"
+      name="datum"
+      type="text"
+      datepicker
+      datepicker-format="dd.mm.yyyy"
+      placeholder="Wunschtermin auswählen"
+      class="w-full px-4 py-3 pr-12 rounded-md text-black shadow-inner text-base bg-white placeholder:text-gray-500"
+    />
+    <div class="pointer-events-none absolute inset-y-0 right-4 flex items-center text-gray-400">
+      <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
+      </svg>
+    </div>
   </div>
-</div>
 
-
-
-
-  <!-- Desktop: normales Date-Feld -->
+  <!-- Desktop -->
   <input
     id="datum-desktop"
     name="datum"
     type="date"
-    class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base hidden sm:block"
+    class="w-full px-4 py-3 rounded-md text-black shadow-inner text-base bg-white hidden sm:block"
   />
 </div>
+
 
 
     <!-- Nachricht -->
