--- a/index.html
+++ b/index.html
@@ -1114,6 +1114,8 @@
     datepicker
     datepicker-format="dd.mm.yyyy"
     placeholder="Wunschtermin auswählen"
+class="w-full px-4 py-3 pr-12 rounded-md shadow-inner text-base bg-white text-black placeholder:text-gray-500 block sm:hidden"
+
   />
   <!-- Icon-Overlay -->
   <div class="pointer-events-none absolute inset-y-0 right-4 flex items-center text-gray-400">
