--- a/imprint.html
+++ b/imprint.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="DJ Jonny, Impressum, Kontakt, DJ Österreich, Event-DJ" />
-  <meta name="description" content="Impressum der offiziellen Website von DJ Jonny – Angaben gemäß §5 TMG." />
+<meta name="description" content="Impressum der offiziellen Website von DJ Jonny – Angaben gemäß §5 E-Commerce-Gesetz (ECG)." />
   <meta name="author" content="DJ Jonny" />
   <meta property="og:title" content="DJ Jonny – Impressum" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.djjonny.at/imprint.html" />
   <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
-  <meta property="og:description" content="Rechtliche Informationen und Kontaktangaben von DJ Jonny gemäß § 5 TMG." />
+<meta property="og:description" content="Rechtliche Informationen und Kontaktangaben von DJ Jonny gemäß § 5 E-Commerce-Gesetz (ECG)." />
+
 
   <title>DJ Jonny – Impressum</title>
 
@@ -85,24 +86,66 @@
 
 <!-- Inhalt -->
 <section class="bg-white border-b py-8">
-  <div class="container max-w-5xl mx-auto m-8" data-aos="fade-left">
-    <div class="text-gray-800 text-base leading-relaxed space-y-4">
-      <h2 class="text-xl font-semibold mb-4 text-center">Angaben gemäß § 5 TMG</h2>
+  <div class="container max-w-5xl mx-auto px-4 py-6 sm:px-0 sm:py-8" data-aos="fade-left">
+
+    <div class="text-gray-800 text-base leading-relaxed space-y-6">
+      <h2 class="text-xl font-semibold mb-4 text-center">Angaben gemäß § 5 ECG, § 14 UGB, § 63 GewO und § 25 MedienG</h2>
       <p>
+        <strong>Jonny Fankhauser</strong><br />
         DJ Jonny<br />
-        Musterstraße 12<br />
-        6370 Kitzbühel<br />
+        Höf 52<br />
+        5020 Taxenbach<br />
         Österreich
       </p>
       <p>
         <strong>Kontakt:</strong><br />
-        Telefon: +43 664 1234567<br />
-        E-Mail: booking@djjonny.at
+        Telefon: +43 677 61667518<br />
+        E-Mail: <a href="mailto:office@dj-jonny.at">office@dj-jonny.at</a><br />
+        Website: <a href="https://www.dj-jonny.at">www.dj-jonny.at</a>
+      </p>
+      <p>
+        <strong>Unternehmensgegenstand:</strong><br />
+        DJ-Dienstleistungen für Veranstaltungen sowie Bereitstellung von Ton- und Lichttechnik
+      </p>
+      <p>
+        <strong>Gewerbebehörde / Aufsichtsbehörde:</strong><br />
+        Bezirkshauptmannschaft Zell am See
+      </p>
+      <p>
+        <strong>Mitglied bei:</strong><br />
+        Wirtschaftskammer Salzburg – Sparte Freizeit- und Sportbetriebe
+      </p>
+      <p>
+        <strong>Umsatzsteuer:</strong><br />
+        Umsatzsteuerfrei gemäß § 6 Abs. 1 Z 27 UStG (Kleinunternehmerregelung)
+      </p>
+      <hr class="my-4">
+      <h3 class="text-lg font-semibold">Haftung für Inhalte</h3>
+      <p>
+        Die Inhalte dieser Website wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität kann jedoch keine Gewähr übernommen werden.
+        Als Diensteanbieter bin ich gemäß § 18 ECG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur Überwachung übermittelter oder gespeicherter fremder Informationen besteht jedoch nicht. Sobald mir rechtswidrige Inhalte bekannt werden, entferne ich diese umgehend.
+      </p>
+      <h3 class="text-lg font-semibold">Haftung für Links</h3>
+      <p>
+        Diese Website enthält Verlinkungen zu externen Webseiten Dritter, auf deren Inhalte ich keinen Einfluss habe. Zum Zeitpunkt der Verlinkung waren keine rechtswidrigen Inhalte erkennbar. Eine laufende Kontrolle verlinkter Inhalte ist jedoch nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden derartige Links umgehend entfernt.
+      </p>
+      <h3 class="text-lg font-semibold">Urheberrecht</h3>
+      <p>
+        Alle Inhalte dieser Website – insbesondere Texte, Fotos, Grafiken und Videos – unterliegen dem österreichischen Urheberrecht. Jegliche Nutzung, Vervielfältigung oder Weitergabe außerhalb der gesetzlichen Schranken bedarf meiner ausdrücklichen Zustimmung. Falls du Inhalte dieser Seite verwenden möchtest, kontaktiere mich bitte vorab.
+        Sollte dir dennoch eine Urheberrechtsverletzung auffallen, bitte ich um entsprechende Mitteilung – ich werde den Inhalt umgehend prüfen und gegebenenfalls entfernen.
+      </p>
+      <h3 class="text-lg font-semibold">Online-Streitbeilegung</h3>
+      <p>
+        Verbraucher haben die Möglichkeit, Beschwerden an die Online-Streitbeilegungsplattform der EU zu richten: <a href="https://ec.europa.eu/consumers/odr" class="text-purple-600 hover:underline">https://ec.europa.eu/consumers/odr</a>.<br />
+        Ich bin jedoch nicht verpflichtet und auch nicht bereit, an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
+      </p>
+      <hr class="my-4">
+      <p class="text-sm text-gray-500">
+        Gestaltung & technische Umsetzung der Website: Sabrina Kaiser MA (ohne inhaltliche oder redaktionelle Verantwortung)
       </p>
     </div>
   </div>
 </section>
-
 
 <footer class="bg-black border-b pt-6 text-sm sm:text-base">
   <div class="container px-4 mx-auto mt-6">
