--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
                 Musik, Matsch und Emotionen – mein Fixpunkt beim Mozart 100.
               </h3>
               <p class="text-gray-600">
-                Der <em>mozart 100 by UTMB®</em> in Salzburg ist für mich längst Tradition – und auch dieses Jahr war es wieder der absolute Wahnsinn! Als DJ und Moderator durfte ich die Teilnehmenden auf ihrer sportlichen Reise begleiten – mit Beats, Ansagen und jeder Menge Gänsehautmomenten.
+                Der <em>mozart 100 by UTMB®</em> in Salzburg ist für mich längst Tradition – und auch dieses Jahr war es wieder der absolute Wahnsinn! Als DJ durfte ich die Teilnehmenden auf ihrer sportlichen Reise begleiten – mit Beats, Ansagen und jeder Menge Gänsehautmomenten.
                 <br><br>
                 Vom Start bis ins Ziel, bei Sonne, Wind oder Regen: Die Stimmung war wie immer elektrisierend. Für mich ist dieses Event jedes Jahr ein echtes Highlight – Salzburg, du bist und bleibst magisch!
               </p>
