--- a/imprint.html
+++ b/imprint.html
@@ -38,11 +38,11 @@
     </a>
 
     <nav class="hidden sm:flex gap-6 text-base items-center">
-      <a href="#recent-events" class="hover:text-purple-600">Rückblick</a>
-      <a href="#blog" class="hover:text-purple-600">Referenzen</a>
-      <a href="#next-events" class="hover:text-purple-600">Nächste Events</a>
-      <a href="#about-me" class="hover:text-purple-600">Über mich</a>
-      <a href="#services" class="hover:text-purple-600">Leistungen</a>
+      <a href="index.html#recent-events" class="hover:text-purple-600">Rückblick</a>
+      <a href="index.html#blog" class="hover:text-purple-600">Referenzen</a>
+      <a href="index.html#next-events" class="hover:text-purple-600">Nächste Events</a>
+      <a href="index.html#about-me" class="hover:text-purple-600">Über mich</a>
+      <a href="index.html#services" class="hover:text-purple-600">Leistungen</a>
     </nav>
 
     <div class="flex items-center gap-3">
@@ -83,6 +83,8 @@
 <div class="header h-[150px] sm:h-[300px] relative flex items-center justify-center pt-6 sm:pt-12">
   <h1 class="text-white text-2xl sm:text-5xl underline text-center">Impressum</h1>
 </div>
+
+
 
 <!-- Inhalt -->
 <section class="bg-white border-b py-8">
