--- a/imprint.html
+++ b/imprint.html
@@ -47,10 +47,10 @@
 
     <div class="flex items-center gap-3">
       <div class="hidden sm:flex gap-2 items-center">
-<a href="index.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
-<a href="index-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
-<a href="index-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
-<a href="index-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+<a href="imprint.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="imprint-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="imprint-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="imprint-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
       </div>
       <div class="sm:hidden">
         <button onclick="document.getElementById('mobile-menu').classList.toggle('hidden')" class="text-purple-600 focus:outline-none">
@@ -70,10 +70,10 @@
       <a href="#about-me" class="text-purple-700 font-medium hover:text-purple-900">Über mich</a>
       <a href="#services" class="text-purple-700 font-medium hover:text-purple-900">Leistungen</a>
       <div class="flex gap-4 pt-2">
- <a href="index.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
-<a href="index-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
-<a href="index-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
-<a href="index-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+<a href="imprint.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="imprint-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="imprint-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="imprint-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
       </div>
     </div>
   </div>
@@ -199,10 +199,10 @@
 <div class="mb-6">
   <h5 class="uppercase font-bold mb-2.5">Sprachen</h5>
   <ul class="list-none mb-0">
-    <li><a href="#languages" class="text-white">Deutsch</a></li>
-    <li><a href="#languages" class="text-white">Englisch</a></li>
-<li><a href="index-zh.html" class="text-white">Chinesisch</a></li>
-<li><a href="index-ru.html" class="text-white">Russisch</a></li>
+<li><a href="imprint.html" class="text-white">Deutsch</a></li>
+<li><a href="imprint-en.html" class="text-white">Englisch</a></li>
+<li><a href="imprint-zh.html" class="text-white">Chinesisch</a></li>
+<li><a href="imprint-ru.html" class="text-white">Russisch</a></li>
   </ul>
 </div>
 
