--- a/imprint-en.html
+++ b/imprint-en.html
@@ -48,10 +48,10 @@
 
     <div class="flex items-center gap-3">
       <div class="hidden sm:flex gap-2 items-center">
-<a href="index.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
-<a href="index-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
-<a href="index-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
-<a href="index-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+<a href="imprint.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="imprint-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="imprint-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="imprint-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
       </div>
       <div class="sm:hidden">
         <button onclick="document.getElementById('mobile-menu').classList.toggle('hidden')" class="text-purple-600 focus:outline-none">
@@ -72,10 +72,10 @@
     <a href="#services" class="text-purple-700 font-medium hover:text-purple-900">Services</a>
 
       <div class="flex gap-4 pt-2">
- <a href="index.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
-<a href="index-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
-<a href="index-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
-<a href="index-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+<a href="imprint.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="imprint-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="imprint-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="imprint-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
       </div>
     </div>
   </div>
@@ -208,8 +208,8 @@
   <ul class="list-none mb-0">
 <li><a href="imprint.html" class="text-white">German</a></li>
 <li><a href="imprint-en.html" class="text-white">English</a></li>
-<li><a href="index-zh.html" class="text-white">Chinese</a></li>
-<li><a href="index-ru.html" class="text-white">Russian</a></li>
+<li><a href="imprint-zh.html" class="text-white">Chinese</a></li>
+<li><a href="imprint-ru.html" class="text-white">Russian</a></li>
   </ul>
 </div>
 
