--- a/privacy.html
+++ b/privacy.html
@@ -3,31 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords" content="DJ Jonny, Datenschutz, Privacy Policy, DJ Website" />
-  <meta name="description" content="Datenschutzerklärung von DJ Jonny – alle Informationen zur Erhebung, Nutzung und Speicherung Ihrer Daten." />
+  
+  <meta name="keywords" content="DJ Jonny, Datenschutz, DSGVO, Datenverarbeitung, Kontaktformular, DJ Österreich" />
+  <meta name="description" content="Datenschutzerklärung der offiziellen Website von DJ Jonny – gemäß DSGVO und TKG 2003. Erfahre, wie deine Daten verarbeitet werden." />
   <meta name="author" content="DJ Jonny" />
-  <meta property="og:title" content="DJ Jonny – Datenschutz" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="DJ Jonny – Datenschutzerklärung" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.djjonny.at/privacy.html" />
-  <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
-  <meta property="og:description" content="Erfahren Sie mehr über den Datenschutz auf der offiziellen Website von DJ Jonny." />
+  <meta property="og:url" content="https://www.dj-jonny.at/privacy.html" />
+  <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
+  <meta property="og:description" content="Hier findest du alle Informationen zum Datenschutz bei DJ Jonny – verständlich & DSGVO-konform." />
 
   <title>DJ Jonny – Datenschutz</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="index.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.0/sweetalert2.min.css"
+        integrity="sha512-NvuRGlPf6cHpxQqBGnPe7fPoACpyrjhlSNeXVUY7BZAj1nNhuNpRBq3osC4yr2vswUEuHq2HtCsY2vfLNCndYA=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="index.css" />
 
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+<style>
+  /* Grundstil für die mobilen + Desktop-Inputs */
+  #datum-mobil,
+  #datum-desktop {
+    width: 100%;
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    background-color: white;
+    box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
+  }
+
+  /* Mehr Platz rechts für das Icon */
+  #datum-mobil {
+    padding-right: 3rem;
+  }
+</style>
+<body>
 
 
   <a href="index.html" class="fixed top-20 left-4 z-50 bg-purple-600 text-white px-4 py-2 rounded-full shadow-lg hover:bg-purple-700 transition hidden sm:inline-block">
     ← Startseite
   </a>
+
 
 <!-- Header -->
 <header class="fixed top-0 z-50 w-full bg-white shadow">
@@ -37,19 +67,19 @@
     </a>
 
     <nav class="hidden sm:flex gap-6 text-base items-center">
-      <a href="#recent-events" class="hover:text-purple-600">Rückblick</a>
-      <a href="#blog" class="hover:text-purple-600">Referenzen</a>
-      <a href="#next-events" class="hover:text-purple-600">Nächste Events</a>
-      <a href="#about-me" class="hover:text-purple-600">Über mich</a>
-      <a href="#services" class="hover:text-purple-600">Leistungen</a>
+      <a href="index.html#recent-events" class="hover:text-purple-600">Rückblick</a>
+      <a href="index.html#blog" class="hover:text-purple-600">Referenzen</a>
+      <a href="index.html#next-events" class="hover:text-purple-600">Nächste Events</a>
+      <a href="index.html#about-me" class="hover:text-purple-600">Über mich</a>
+      <a href="index.html#services" class="hover:text-purple-600">Leistungen</a>
     </nav>
 
     <div class="flex items-center gap-3">
       <div class="hidden sm:flex gap-2 items-center">
-<a href="index.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
-<a href="index-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
-<a href="index-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
-<a href="index-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+<a href="privacy.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="privacy-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="privacy-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="privacy-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
       </div>
       <div class="sm:hidden">
         <button onclick="document.getElementById('mobile-menu').classList.toggle('hidden')" class="text-purple-600 focus:outline-none">
@@ -63,16 +93,16 @@
 
   <div id="mobile-menu" class="sm:hidden hidden fixed top-14 left-0 right-0 bg-white z-40 shadow-lg">
     <div class="flex flex-col items-center gap-4 py-4">
-      <a href="#recent-events" class="text-purple-700 font-medium hover:text-purple-900">Rückblick</a>
-      <a href="#blog" class="text-purple-700 font-medium hover:text-purple-900">Referenzen</a>
-      <a href="#next-events" class="text-purple-700 font-medium hover:text-purple-900">Nächste Events</a>
-      <a href="#about-me" class="text-purple-700 font-medium hover:text-purple-900">Über mich</a>
-      <a href="#services" class="text-purple-700 font-medium hover:text-purple-900">Leistungen</a>
+      <a href="index.html#recent-events" class="text-purple-700 font-medium hover:text-purple-900">Rückblick</a>
+      <a href="index.html#blog" class="text-purple-700 font-medium hover:text-purple-900">Referenzen</a>
+      <a href="index.html#next-events" class="text-purple-700 font-medium hover:text-purple-900">Nächste Events</a>
+      <a href="index.html#about-me" class="text-purple-700 font-medium hover:text-purple-900">Über mich</a>
+      <a href="index.html#services" class="text-purple-700 font-medium hover:text-purple-900">Leistungen</a>
       <div class="flex gap-4 pt-2">
- <a href="index.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
-<a href="index-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
-<a href="index-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
-<a href="index-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+ <a href="privacy.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="privacy-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="privacy-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="privacy-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
       </div>
     </div>
   </div>
@@ -80,32 +110,93 @@
 
 <!-- Titelbereich -->
 <div class="header h-[150px] sm:h-[300px] relative flex items-center justify-center pt-6 sm:pt-12">
-  <h1 class="text-white text-2xl sm:text-5xl underline text-center">Datenschutz</h1>
+  <h1 class="text-white text-2xl sm:text-5xl underline text-center">Datenschutzerklärung</h1>
 </div>
+
+
 
 <!-- Inhalt -->
 <section class="bg-white border-b py-8">
-  <div class="container max-w-5xl mx-auto m-8" data-aos="fade-left">
-    <p class="text-gray-800 text-base leading-relaxed space-y-4">
-      Die Privatsphäre unserer Besucher ist uns wichtig. Daher möchten wir Sie darüber informieren, welche Art von Informationen wir sammeln, wie wir sie verwenden und mit wem wir sie teilen.<br><br>
+  <div class="container max-w-5xl mx-auto px-4 py-6 sm:px-0 sm:py-8" data-aos="fade-left">
 
-      <strong>Informationen, die Sie uns zur Verfügung stellen</strong><br>
-      Bei der Kontaktaufnahme oder Buchung über unsere Website bitten wir Sie eventuell um persönliche Informationen wie Ihren Namen, Ihre E-Mail-Adresse, Ihre Anschrift und Ihre Telefonnummer. Diese Informationen nutzen wir ausschließlich zur Bearbeitung Ihrer Anfragen oder Buchungen.<br><br>
+    <div class="text-gray-800 text-base leading-relaxed space-y-6">
+      <h2 class="text-xl font-semibold mb-4 text-center">Deine Daten – meine Verantwortung</h2>
 
-      <strong>Automatisch gesammelte Informationen</strong><br>
-      Beim Besuch unserer Website erfassen wir technische Daten wie IP-Adresse, verwendeter Browser, Verweildauer und besuchte Seiten. Diese dienen der Optimierung unseres Angebots.<br><br>
+      <p>Der Schutz deiner persönlichen Daten ist mir ein besonderes Anliegen. Ich verarbeite deine Daten daher ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, TKG 2003). Nachfolgend informiere ich dich über die Art, den Umfang und Zweck der Datenverarbeitung im Rahmen meiner Website.</p>
 
-      <strong>Cookies</strong><br>
-      Unsere Website verwendet Cookies, um Ihr Nutzererlebnis zu verbessern. Sie können Cookies in Ihrem Browser deaktivieren.<br><br>
+      <h3 class="text-lg font-semibold">Verantwortlicher</h3>
+      <p>
+        <strong>Jonny Fankhauser</strong><br />
+        DJ Jonny<br />
+        Höf 52<br />
+        5020 Taxenbach<br />
+        Österreich<br />
+        E-Mail: <a href="mailto:office@dj-jonny.at" class="text-purple-600 hover:underline">office@dj-jonny.at</a><br />
+        Telefon: +43 677 61667518
+      </p>
 
-      <strong>Weitergabe von Daten</strong><br>
-      Eine Weitergabe Ihrer Daten an Dritte erfolgt nur, wenn dies gesetzlich erforderlich ist oder zur Vertragserfüllung notwendig ist.<br><br>
+      <h3 class="text-lg font-semibold">Hosting</h3>
+      <p>
+        Diese Website wird über <strong>GitHub Pages</strong> gehostet. Die Domain wird von <strong>World4You Internet Services GmbH</strong>, Hafenstraße 35, 4020 Linz, Österreich, verwaltet.<br />
+        Beim Besuch der Website werden technische Daten (IP-Adresse, Zeitpunkt, Browsertyp, Betriebssystem) automatisch erfasst und in sogenannten Server-Logfiles gespeichert. Diese Daten dienen ausschließlich der Systemsicherheit und Fehleranalyse und werden nicht personenbezogen ausgewertet.
+      </p>
 
-      <strong>Ihre Rechte</strong><br>
-      Sie haben das Recht auf Auskunft, Berichtigung und Löschung Ihrer gespeicherten Daten. Kontaktieren Sie uns dazu bitte über die im Impressum angegebene Adresse.
-    </p>
+      <h3 class="text-lg font-semibold">Kontaktformular</h3>
+      <p>
+        Wenn du über das Kontaktformular mit mir in Verbindung trittst, werden folgende Angaben übermittelt:
+      </p>
+      <ul class="list-disc list-inside ml-4">
+        <li>Name (Pflichtfeld)</li>
+        <li>E-Mail-Adresse (Pflichtfeld)</li>
+        <li>Telefonnummer (optional)</li>
+        <li>Eventart (optional)</li>
+        <li>Wunschtermin (optional)</li>
+        <li>Nachricht (Pflichtfeld)</li>
+      </ul>
+   <p>
+  Die Verarbeitung erfolgt über den Dienst <strong>Formspree</strong> (Formspree Inc., USA). Deine Angaben werden ausschließlich zur Bearbeitung deiner Anfrage genutzt und nicht für Werbezwecke verwendet. <br />
+  <strong>Die Daten werden in der Regel nach spätestens 6 Monaten gelöscht, sofern keine gesetzliche Aufbewahrungspflicht besteht.</strong>
+</p>
+
+    <h3 class="text-lg font-semibold">Cookies, Skripte & Tracking</h3>
+<p>
+  Diese Website verwendet <strong>keine Cookies zu Werbe-, Analyse- oder Trackingzwecken</strong>. Es kommen ausschließlich technisch notwendige Skripte (z. B. für Animationen oder Formularfunktionen) zum Einsatz, die keine personenbezogenen Daten speichern.
+</p>
+<p>
+  Zur Darstellung und Funktion der Website werden JavaScript- und CSS-Bibliotheken über sogenannte Content Delivery Networks (CDNs) geladen. Dabei handelt es sich um technisch notwendige Prozesse, die keine personenbezogenen Daten erfassen oder speichern.
+</p>
+
+
+      <h3 class="text-lg font-semibold">Externe Links (Social Media)</h3>
+      <p>
+        Die Website enthält Links zu externen Plattformen (TikTok, Instagram, YouTube, Spotify). Beim Aufruf dieser Links gelten die jeweiligen Datenschutzrichtlinien der Drittanbieter. Ich habe keinen Einfluss auf deren Datenverarbeitung.
+      </p>
+
+      <h3 class="text-lg font-semibold">Deine Rechte</h3>
+      <p>Dir stehen gemäß DSGVO grundsätzlich folgende Rechte zu:</p>
+      <ul class="list-disc list-inside ml-4">
+        <li>Recht auf Auskunft</li>
+        <li>Recht auf Berichtigung</li>
+        <li>Recht auf Löschung</li>
+        <li>Recht auf Einschränkung der Verarbeitung</li>
+        <li>Recht auf Datenübertragbarkeit</li>
+        <li>Recht auf Widerruf einer Einwilligung</li>
+        <li>Recht auf Widerspruch gegen die Verarbeitung</li>
+      </ul>
+      <p>
+        Wenn du glaubst, dass die Verarbeitung deiner Daten gegen das Datenschutzrecht verstößt, kannst du dich bei mir oder bei der österreichischen Datenschutzbehörde unter <a href="https://www.dsb.gv.at" class="text-purple-600 hover:underline" target="_blank">www.dsb.gv.at</a> beschweren.
+      </p>
+
+      <h3 class="text-lg font-semibold">Kontakt für Datenschutzanliegen</h3>
+      <p>
+        Bei Fragen oder Anliegen zum Datenschutz kannst du dich jederzeit an mich wenden:<br />
+        E-Mail: <a href="mailto:office@dj-jonny.at" class="text-purple-600 hover:underline">office@dj-jonny.at</a>
+      </p>
+
+    </div>
   </div>
 </section>
+
 
 <footer class="bg-black border-b pt-6 text-sm sm:text-base">
   <div class="container px-4 mx-auto mt-6">
@@ -114,8 +205,8 @@
             
 <!-- Navigation -->
 <div class="mb-6">
-  <h5 class="uppercase font-bold mb-2.5">DJ Jonny</h5>
-  <ul class="list-none mb-0">
+   <h5 class="uppercase font-bold mb-2.5">Info</h5>
+        <ul class="list-none">
     <a href="index.html#recent-events" class="hover:text-purple-600">Rückblick</a>
 <li><a href="references.html" class="text-white">Referenzen</a></li>
     <li><a href="index.html#next-events" class="text-white">Nächste Events</a></li>
@@ -127,8 +218,8 @@
 
 <!-- Community -->
 <div class="mb-6">
-  <h5 class="uppercase font-bold mb-2.5">Community</h5>
-  <ul class="list-none mb-0">
+   <h5 class="uppercase font-bold mb-2.5">Info</h5>
+        <ul class="list-none">
     <li>
       <a href="https://www.tiktok.com/@itsjonnyalta?_t=ZN-8x7U9emhFrS&_r=1" target="_blank" class="text-white">
         TikTok
@@ -155,19 +246,19 @@
 
 <!-- Sprachen -->
 <div class="mb-6">
-  <h5 class="uppercase font-bold mb-2.5">Sprachen</h5>
-  <ul class="list-none mb-0">
-    <li><a href="#languages" class="text-white">Deutsch</a></li>
-    <li><a href="#languages" class="text-white">Englisch</a></li>
-<li><a href="index-zh.html" class="text-white">Chinesisch</a></li>
-<li><a href="index-ru.html" class="text-white">Russisch</a></li>
+   <h5 class="uppercase font-bold mb-2.5">Info</h5>
+        <ul class="list-none">
+<li><a href="privacy.html" class="text-white">Deutsch</a></li>
+<li><a href="privacy-en.html" class="text-white">Englisch</a></li>
+<li><a href="privacy-zh.html" class="text-white">Chinesisch</a></li>
+<li><a href="privacy-ru.html" class="text-white">Russisch</a></li>
   </ul>
 </div>
 
 <!-- Info -->
 <div class="mb-6">
-  <h5 class="uppercase font-bold mb-2.5">Info</h5>
-  <ul class="list-none mb-0">
+   <h5 class="uppercase font-bold mb-2.5">Info</h5>
+        <ul class="list-none">
     <li><a href="index.html#about-me" class="text-white">Wer ist DJ Jonny?</a></li>
     <li><a href="index.html#services" class="text-white">Was ich biete</a></li>
     <li><a href="index.html#kontakt" class="text-white">Kontakt</a></li>
