--- a/privacy-en.html
+++ b/privacy-en.html
@@ -62,12 +62,12 @@
 <!-- Header -->
 <header class="fixed top-0 z-50 w-full bg-white shadow">
   <div class="max-w-7xl mx-auto px-4 py-2 flex items-center justify-between">
-    <a href="index.html" class="flex items-center text-gray-900">
+    <a href="index-en.html" class="flex items-center text-gray-900">
       <img src="img/logo_200x200.png" class="h-8 sm:h-10 w-auto" alt="DJ Jonny Logo" />
     </a>
 
     <nav class="hidden sm:flex gap-6 text-base items-center">
-      <a href="index-en.html#recent-events" class="hover:text-purple-600">Past Events</a>
+      <a href="index-en.html#recent-events" class="hover:text-purple-600">Highlights</a>
       <a href="index-en.html#blog" class="hover:text-purple-600">References</a>
       <a href="index-en.html#next-events" class="hover:text-purple-600">Upcoming Events</a>
       <a href="index-en.html#about-me" class="hover:text-purple-600">About Me</a>
@@ -93,7 +93,7 @@
 
   <div id="mobile-menu" class="sm:hidden hidden fixed top-14 left-0 right-0 bg-white z-40 shadow-lg">
     <div class="flex flex-col items-center gap-4 py-4">
-      <a href="index-en.#recent-events" class="text-purple-700 font-medium hover:text-purple-900">Past Events</a>
+      <a href="index-en.#recent-events" class="text-purple-700 font-medium hover:text-purple-900">Highlights</a>
       <a href="index-en.#blog" class="text-purple-700 font-medium hover:text-purple-900">References</a>
       <a href="index-en.#next-events" class="text-purple-700 font-medium hover:text-purple-900">Upcoming Events</a>
       <a href="index-en.#about-me" class="text-purple-700 font-medium hover:text-purple-900">About Me</a>
@@ -205,10 +205,10 @@
 <div class="mb-6">
    <h5 class="uppercase font-bold mb-2.5">Info</h5>
         <ul class="list-none">
-    <a href="index.html#recent-events" class="hover:text-purple-600">Past Events</a>
-<li><a href="references.html" class="text-white">References</a></li>
-    <li><a href="index.html#next-events" class="text-white">Upcoming Events</a></li>
-    <li><a href="imprint.html" class="text-white">Imprint</a></li>
+    <a href="index-en.html#recent-events" class="hover:text-purple-600">Highlights</a>
+<li><a href="references-en.html" class="text-white">References</a></li>
+    <li><a href="index-en.html#next-events" class="text-white">Upcoming Events</a></li>
+    <li><a href="imprint-en.html" class="text-white">Imprint</a></li>
     <li><a href="privacy-en.html" class="text-white">Privacy Policy</a></li>
   </ul>
 </div>
